# BinaryBaddies

./: .gitignore  Makefile  README.md  client.proto  docker-compose.yml  env.txt  got_stuff_to_work1.txt  got_stuff_to_work2.txt  implant.options  implant.proto  requirements.txt  server.proto
C2_Client/: client.proto  client.py  client_pb2.py  flask_app.py  implant_pb2.py
C2_Implant/: .implant.c.swp  Makefile  change_directory.c  change_directory.h  commands.txt  http_client.c  http_client.h  httpclient.h  implant.c  implant.h  implant.pb.c  implant.pb.h  list_directory.c  list_directory.h  opcodes.h
C2_Server/: blueprint_admin.py  blueprint_basic.py  blueprint_client.py  blueprint_explorer.py  blueprint_rpc.py  build_flask_app.py  client.py  client_pb2.py  client_pb2.pyi  commands.txt  constants.py  database.py  implant_pb2.py  implant_pb2.pyi  models.py  (+4 more)
cvnt/: pyproject.toml  wsgi.py
cvnt/cvnt/: .blueprint_rpc.py.swp  app.py  blueprint_admin.py  blueprint_basic.py  blueprint_client.py  blueprint_explorer.py  blueprint_rpc.py  blueprint_rpc_crypto.py  blueprint_terminal.py  build.py  build_flask_app.py  ciphertext.py  client_pb2.py  client_pb2.pyi  constants.py  csrf.py  db_operations.py  hello_world.c  implant_crypto.c  implant_pb2.py  implant_pb2.pyi  models.py  server_private_key.txt  server_public_key.txt  serverkeys.py  tables.py  testimplantcrypto.c  testservercrypto.py
cvnt/cvnt/chromestealing/: chromestealer.cpp
cvnt/cvnt/static/: landing.html
cvnt/cvnt/static/js/: main.js
cvnt/cvnt/templates/: explorer.html  index.html  landing.html  terminal.html
(+42 files in other folders)
