[tool.poetry]
name = "cvnt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-wtf = "^1.2.1"
flask-bootstrap = "^3.3.7.1"
protobuf = "^5.26.1"
grpcio-tools = "^1.62.2"
flask-login = "^0.6.3"
requests = "^2.31.0"
datetime = "^5.5"
ip2geotools = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
